force-app/main/default/objects/Agent_Session__c/Agent_Session__c.object-meta.xml
<CustomObject>
    <label>Agent Session</label>
    <nameField>
        <label>Agent Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Sesssions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>