force-app/main/default/objects/Agent_Session__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session Id</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>