force-app/main/default/objects/Agent_Session__c/fields/Slack_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Id__c</fullName>
    <label>Slack Id</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>