force-app/main/default/objects/Agent_Session__c/fields/Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Thread_Id__c</fullName>
    <label>Thread Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>